# TwoPaCo

./: .gitignore  GFA_EXAMPLE.md  LICENSE.txt  NEWR.md  NEWS.md  README.md  data.txt
doc/: ideas.txt  parallel_results.xlsx  times.txt  writeup.bib  writeup.tex
doc/presentations/April24/: Rearrangements.tex  plan.txt
example/: README.md  example.dbg  example.dot  example.fa  example.seq  example2.fa  example_fasta.fa  example_gfa1.gfa  example_gfa2.gfa
graphcomparer/comparermsvs/: comparer.cpp  comparermsvs.sln  comparermsvs.vcxproj  comparermsvs.vcxproj.filters
graphconstructor/constructormsvs/: cmp.py  constructormsvs.sln  constructormsvs.vcxproj  constructormsvs.vcxproj.filters  g0.fasta  g00.fasta  g2.fasta  g3.fasta  glue.py  log  ntest.fasta  test.fasta  test1.fasta  teste.fasta  tmp
graphconstructor/misc/: testgenerator.py
graphconstructor/src/: CMakeLists.txt  bifurcationstorage.h  bloomfilter.cpp  bloomfilter.h  candidateoccurence.h  compressedstring.cpp  compressedstring.h  concurrentbitvector.cpp  concurrentbitvector.h  constructor.cpp  dnachar.cpp  dnachar.h  dnastring.cpp  dnastring.h  fastset.cpp  fastset.h  hashing.h  sortsupport.h  streamfastaparser.cpp  streamfastaparser.h  test.cpp  test.h  vertexenumerator.cpp  vertexenumerator.h  vertexenumerator.h.orig
graphconstructor/src/ngramhashing/: README  characterhash.h  cyclichash.h  mersennetwister.h
graphtester/testermsvs/: testermsvs.sln  testermsvs.vcxproj  testermsvs.vcxproj.filters
misc/data/: test.fasta
msvs/graphconstructor/: graphconstructor.sln
msvs/graphconstructor/graphconstructor/: graphconstructor.vcxproj  graphconstructor.vcxproj.filters
msvs/graphconstructor/graphdump/: graphdump.vcxproj  graphdump.vcxproj.filters
msvs/graphconstructor/naivegraphconstructor/: naivegraphconstructor.vcxproj  naivegraphconstructor.vcxproj.filters
naiveconstructor/naivemsvs/: dump.txt  fast.txt  naivemsvs.sln  naivemsvs.vcxproj  naivemsvs.vcxproj.filters
naiveconstructor/naivemsvs/exp/: comp.bat  de_fast.txt  report.txt
paper/: bibliography.bib  paper.tex  plan.txt
src/: CMakeLists.txt
src/common/: dnachar.cpp  dnachar.h  junctionapi.h  junctionpositionapi.h  streamfastaparser.h
src/common/junctionapi/: junctionapi.h
src/common/ngramhashing/: characterhash.h
src/graphconstructor/: CMakeLists.txt  assemblyedgeconstructor.cpp  assemblyedgeconstructor.h  bifurcationstorage.h  candidateoccurence.h  common.cpp  common.h  compressedstring.cpp  compressedstring.h  concurrentbitvector.cpp  concurrentbitvector.h  constructor.cpp  fillerworker.h  taskqueue.h  test.cpp  test.h  vertexenumerator.cpp  vertexenumerator.h  vertexrollinghash.h
src/graphdump/: CMakeLists.txt  binaryWriter.h  glueGFA.py  graphdump.cpp  pufferize.h
src/graphdump/compact_vector/: compact_vector.hpp
src/naiveconstructor/: naiveconstructor.cpp
test/test0/: test0_5.jnc
test/test1/: test1_13.jnc  test1_25.jnc
test/test2/: test2_25.jnc
